--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  text-shadow: #111;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -37,7 +38,7 @@ body {
 
 .board h1 {
   color: #eee;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 
 .board button {
@@ -48,7 +49,7 @@ body {
   color: #eee;
   width: 100px;
   border-radius: 5px;
-  transition: 0.2s;
+  transition: 0.1s;
   font-weight: bold;
   cursor: pointer;
 }
@@ -65,10 +66,17 @@ body {
 }
 
 .turn {
-  display: flex;
-  justify-content: center;
   margin: 15px auto;
   width: fit-content;
+}
+
+.turn h2 {
+  margin-bottom: 15px;
+}
+
+.turn .container {
+  display: flex;
+  justify-content: center;
   position: relative;
   border-radius: 10px;
 }
@@ -81,9 +89,16 @@ body {
   border-color: transparent;
 }
 
+.turn .square {
+  margin: 5px;
+  border: 1px solid #979797;
+  color: #6b6b6b;
+}
+
 .square.is-selected {
+  border: 1px solid #eee;
   color: #fff;
-  background: #09f;
+  background: rgb(83, 83, 83);
 }
 
 .winner {
@@ -120,12 +135,14 @@ body {
 }
 
 .square {
-  width: 100px;
-  height: 100px;
-  border: 2px solid #eee;
-  border-radius: 5px;
+  width: 120px;
+  height: 120px;
+  border: 3px solid #eee;
+  border-radius: 8px;
   display: grid;
   place-items: center;
   cursor: pointer;
   font-size: 48px;
+  background-color: #313131;
+  text-shadow: #111 2px 2px 2px;
 }
